Analyzer sorting page. Fixed inconsistency of subrun estimated time estimates not summing to run estimated time estimates. Added collapse buttons for subrun lists - css still not playing totally nicely with me.

--- a/css/analyzer.css
+++ b/css/analyzer.css
@@ -97,6 +97,21 @@ div.no-pad{
     margin-right: 4px;
 }
 
+.btn-expand{
+ /* display:block; */
+ /* line-height: 16px; */
+  height: 16px; 
+  width: 16px;
+  padding: 0 0;
+  border-radius: 50%;
+  border: 1px solid #DAA520;
+  background-color: #DAA520;
+  color: #191C40;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+}
+
 #messageDiv{
     width: 100%;
     text-align: center;
